# spec2test

./: .gitignore  README.md  pyproject.toml
specs/: waf_login_1.ir.yaml  waf_login_1.yaml  waf_login_2.ir.yaml
src/spec2ir/: converter.py  ir_model.py  main.py  prompt.py  spec_model.py  ui_context.py
src/spec2ir/llm/: base.py  mock.py  openai_compat.py
src/spec2ir_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spec2ir_runner/: __init__.py  main.py  runner.py
